[SDR-360] BE : SonarCloud 규칙 수정과 Code Smells 제거 (#197)
* SDR-360 build: apache commons-validator 의존성 추가

Co-authored-by: ku-kim <kukim.dev@gmail.com>
Co-authored-by: seokho-ham <forky.dev@gmail.com>
Co-authored-by: jinan159 <wlsdhks0423@naver.com>

* SDR-360 fix: email 정규표현식 검증 apache 라이브러리로 변경

Co-authored-by: ku-kim <kukim.dev@gmail.com>
Co-authored-by: seokho-ham <forky.dev@gmail.com>
Co-authored-by: jinan159 <wlsdhks0423@naver.com>

* BE-feat/SDR-360 fix: 이미지 파일 URL 정규표현식 체크 apache 라이브러리로 변경 #time 20m

Co-authored-by: ku-kim <kukim.dev@gmail.com>
Co-authored-by: seokho-ham <forky.dev@gmail.com>
Co-authored-by: jinan159 <wlsdhks0423@naver.com>

* SDR-360: style: sonarcloud code smell 제거

- Test 코드에서 exception 발생할 수 있는 포인트 제거
- 주석 indent 추가
- 미사용 코드 & 주석 제거
- Stream.collect(Collectors.toList()) -> Stream.toList()
- Test class public 제거
- deprecated 주석 추가
- abstract class 생성자 protected 로 변경
- 조건문 가독성 좋게 변경

Co-authored-by: ku-kim <kukim.dev@gmail.com>
Co-authored-by: forky <forky.dev@gmail.com>

Co-authored-by: seokho-ham <forky.dev@gmail.com>
Co-authored-by: jinan159 <wlsdhks0423@naver.com>